<resources>
    <string name="google_map_key">AIzaSyDtOSbE2DPLY44H60uHIjX3rNS-IZGUYKk</string>
    <string name="app_name">TAAS Driver</string>
    <string name="closeDrawer">Close</string>
    <string name="openDrawer">open</string>
    <string name="client_detail">CLIENT DETAIL</string>
    <string name="info">INFO</string>
    <string name="pickup_location">PICKUP LOCATION</string>
    <string name="drop_location">DROP LOCATION</string>
    <string name="other_docs">Other Documents</string>
    <string name="customer_info">CUSTOMER INFORMATION</string>
    <string name="address">Address</string>
    <string name="my_location">MY LOCATION</string>
    <string name="getting_location">Getting location...</string>
    <string name="your_account">Your Account</string>
    <string name="trip_conformation">TRIP CONFIRMATION</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="register">Register</string>
    <string name="login_as_testing">LOGIN AS TESTING</string>
    <string name="upload_file">Upload File</string>
    <string name="image_file">Image File</string>
    <string name="pdf_file">PDF File</string>
    <string name="cancel">CANCEL</string>
    <string name="new_version">New Version Avaiable</string>
    <string name="force_update">Update</string>
    <string name="oops">Oops !!</string>
    <string name="network_problem">Network Problem!!</string>
    <string name="exit">EXIT</string>
    <string name="refresh">REFRESH</string>
    <string name="report_issue">Report Issue</string>
    <string name="call_support">Call Support</string>
    <string name="show_notification">Show notification</string>
    <string name="no_rides">No Rides!!</string>
    <string name="daily_earnings">DAILY EARNINGS</string>
    <string name="your_location">Your location</string>
    <string name="track_ride">Track ride</string>
    <string name="bill_details">Bill Details</string>
    <string name="total_fare">Total Fare</string>
    <string name="call_user">Call User</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="reject_ride">Reject Ride</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="booking_cancel_by_customer">Ride Cancelled By Customer !</string>
    <string name="this_is_a_mandatory_app_update_please_update_your_app_version_sorry_for_the_inconvenience_thanks">This is a mandatory app update. Please update your app version. Sorry for the inconvenience. Thanks</string>
    <string name="update">Update</string>
    <string name="new_version_available">New Version Available</string>
    <string name="ride_start">Ride Start</string>
    <string name="remind_me_later">Remind me Later</string>
    <string name="new_text">New Text</string>
    <string name="total_rides">Total Rides</string>
    <string name="total_earning">Total Earning</string>
    <string name="version">Version</string>
    <string name="old_pasword_field_is_empty">Old Password field is empty</string>
    <string name="new_password_field_is_empty">New Password field is empty</string>
    <string name="confirm_password_field_is_empty">Confirm Password field is empty</string>
    <string name="set_password_id_of_min_six_character">Set password id of min. 6 character</string>
    <string name="password_not_matched">Password Not Matched !!!</string>
    <string name="loading">Loading...</string>
    <string name="no_data_found">No Data Found</string>
    <string name="service_missing">SERVICE MISSING</string>
    <string name="update_required">UPDATE REQUIRED</string>
    <string name="please_upload_insurance_copy">Please upload insurance copy</string>
    <string name="please_upload_copy">Please upload licence copy</string>
    <string name="please_rc_copy">Please upload rc copy</string>
    <string name="insurance_copy_saved">Insurance Copy Saved</string>
    <string name="lisence_copy_saved">Licence Copy Saved</string>
    <string name="RC_copy_saved">RC Copy Saved</string>
    <string name="document_copy_saved">Documents Copy Saved</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="email_can_not_be_empty">Required field empty!</string>
    <string name="password_can_not_be_empty">Password field can\'t be Empty</string>
    <string name="please_select_stars">Please select stars</string>
    <string name="name_can_not_be_empty">Name cannot be empty!</string>
    <string name="phone_can_not_be_empty">Phone cannot be empty!</string>
    <string name="bank_name_empty">Bank Name cannot be empty!</string>
    <string name="account_name_empty">Account Name cannot be empty!</string>
    <string name="account_number_empty">Account Number cannot be empty!</string>
    <string name="time_out">Time Out</string>
    <string name="no_city_found">No City Found</string>
    <string name="please_select_city">Please Select City First</string>
    <string name="no_car_found">No Car Type Found</string>
    <string name="please_select_car_type_first">Please Select Car Type First</string>
    <string name="no_car_model_found">No Car Model Found</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_bank_name">Please Enter Bank Name</string>
    <string name="please_enter_account_number">Please Enter Account Number</string>
    <string name="please_enter_account_name">Please Enter Account Name</string>
    <string name="please_enter_phone">Please Enter Phone</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_select_car_type">Please Select Car Type</string>
    <string name="please_select_car_model">Please Select Car Model</string>
    <string name="please_enter_car_number">Please Enter car Number</string>
    <string name="please_enter_correct_email">Please Enter Correct Email</string>
    <string name="phone_number_should_be_of_ten_digit">Phone should be of 10 digits</string>
    <string name="password_should_be_minimum_six_digit">Password should be of min. 6 character</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_enter_the_maindatory_details">Please Enter the mandatory details</string>
    <string name="distance_symbol"></string>
    <string name="user_info">User Info</string>
    <string name="accpted">Accepted</string>
    <string name="rejected">REJECTED</string>
    <string name="reached">REACHED</string>
    <string name="ongoing">ON GOING</string>
    <string name="new_ride">New Ride</string>
    <string name="cancel_by_driver">Cancel by Driver</string>
    <string name="retry">Retry</string>
    <string name="enable_app_location">Please Enable your location\n to use the app services</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="permission_String">This Application requires some permissions to run.</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="distance">Distance</string>
    <string name="driver">Driver</string>
    <string name="getting_your_location_please_move_your_vehicle">Getting your location please move your vehicle.</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="online_status_description_txt">You are on duty, In order to turn off request from customer please turn off duty.</string>
    <string name="tedbottompicker_title">Select Image</string>
    <string name="no_image">No Image</string>
    <string name="select_max_count">Already %1$d images selected</string>
    <string name="select_min_count">You have to choice %1$d images</string>
    <string name="create_account">Create Account</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="create_password">Create Password</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_image">Select Photo</string>
    <string name="wifi_signal_strength_changed">Wifi Signal Strength Changed</string>
    <string name="ht_service_notification_title">You Are On Trip </string>
    <string name="ht_service_notification_text">Click To open your Trip</string>
    <string name="search_hint">Search...</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Select a county</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of YOUR_APP_NAME is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="required_field_missing">Required Field missing</string>
    <string name="no_network_available">No Network Available!</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="title_activity_meter_image">MeterImageActivity</string>
    <string name="rationale_camera">Feature needs to access your device camera</string>
    <string name="title_activity_selected_rental_ride">SelectedRentalRideActivity</string>
    <string name="ride_selected_no_data_found">No data found</string>
    <string name="rental_type">HoD Hire Trip</string>
    <string name="PRICE_FARE_ride_fare">Ride fare</string>
    <string name="please_confirm_this_receipt_with_customer">Please confirm receipt with customer.</string>
    <string name="PRICE_FARE__tirp_details">Trip Detail</string>
    <string name="PRICE_FARE__total_payable_amount">Total Payable Amount</string>
    <string name="PRICE_FARE____total_distance">Total Distance :</string>
    <string name="PRICE_FARE____total_waiting_time">Total Waiting Time :</string>
    <string name="PRICE_FARE____total_time">Total Time :</string>
    <string name="PRICE_FARE__fare">Fare :</string>
    <string name="PRICE_FARE__ride_time_charges">Ride Time Charges :</string>
    <string name="PRICE_FARE__waiting_charge">Waiting Charge :</string>
    <string name="PRICE_FARE__net_fare">Net Fare :</string>
    <string name="PRICE_FARE__submit">SUBMIT</string>
    <string name="PRICE_FARE_coupon">Coupon (</string>
    <string name="PRICE_FARE_receipt">See Receipt</string>
    <string name="REGISTER_ACTIVITY__enter_name">Enter Name</string>
    <string name="REGISTER_ACTIVITY__enter_email">Enter Email</string>
    <string name="REGISTER_ACTIVITY__enter_mobile">Enter Mobile</string>
    <string name="REGISTER_ACTIVITY__enter_password">Enter Password</string>
    <string name="REGISTER_ACTIVITY__select_city">Select City</string>
    <string name="REGISTER_ACTIVITY__dummy_txt">Please select the City</string>
    <string name="REGISTER_ACTIVITY__select_car_type">Select Car Type</string>
    <string name="REGISTER_ACTIVITY__select_car_model">Select Car Model</string>
    <string name="REGISTER_ACTIVITY__select_ride_category">Type of Ride</string>
    <string name="REGISTER_ACTIVITY__enter_car_number">Enter Car Number</string>
    <string name="REGISTER_ACTIVITY__bank_name">Enter Bank Name</string>
    <string name="REGISTER_ACTIVITY__account_number">Enter Account Number</string>
    <string name="REGISTER_ACTIVITY__account_holder_name">Enter Account Name</string>
    <string name="METER_IMAGE_ACTIVITY__rentalCabText">RENTAL BOOKING RIDE</string>
    <string name="METER_IMAGE_ACTIVITY__rentalTripBegin">Are you sure you want to begin the Trip?</string>
    <string name="METER_IMAGE_ACTIVITY__rentalTripEnd">Are you sure you want to end the Trip?</string>
    <string name="METER_IMAGE_ACTIVITY__ok">YES</string>
    <string name="METER_IMAGE_ACTIVITY__no">NO</string>
    <string name="REGISTER_ACTIVITY__continuee">CONTINUE</string>
</resources>