<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHeader"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back_signup"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:background="@drawable/ic_back_arrow"
                android:tint="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical">

            <com.taas.driver.typeface.TypeFaceMuseoRegular
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="16dp" />


        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/layout_light"
                android:orientation="vertical"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/driver_image"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/dummy_pic"/>

                <EditText
                    android:id="@+id/edt_username_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/REGISTER_ACTIVITY__enter_name"
                    android:singleLine="true"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />

                <EditText
                    android:id="@+id/edt_email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/REGISTER_ACTIVITY__enter_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />
                <!--
                <EditText
                    android:id="@+id/edt_phone_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/REGISTER_ACTIVITY__enter_mobile"
                    android:maxLength="14"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="15dp" />-->

                <com.taas.driver.typeface.TypeFaceMuseoRegular
                    android:id="@+id/txt_phone_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:text="@string/REGISTER_ACTIVITY__enter_mobile"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />

                <EditText
                    android:id="@+id/edt_pass_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/REGISTER_ACTIVITY__enter_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />

                <com.taas.driver.typeface.TypeFaceMuseoRegular
                    android:id="@+id/tv_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/REGISTER_ACTIVITY__select_city"
                    android:textSize="15dp"
                    geekui:customTypeface="OpenSans_Regular.ttf" />

                <com.taas.driver.typeface.TypeFaceMuseoRegular
                    android:id="@+id/tv_city_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:text="@string/REGISTER_ACTIVITY__dummy_txt" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />

                <com.taas.driver.typeface.TypeFaceMuseoRegular
                    android:id="@+id/tv_car_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/REGISTER_ACTIVITY__select_car_type"
                    android:textSize="15dp"
                    geekui:customTypeface="OpenSans_Regular.ttf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />

                <com.taas.driver.typeface.TypeFaceMuseoRegular
                    android:id="@+id/tv_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/REGISTER_ACTIVITY__select_car_model"
                    android:textSize="15dp"
                    geekui:customTypeface="OpenSans_Regular.ttf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />

                <com.taas.driver.typeface.TypeFaceMuseoRegular
                    android:id="@+id/tv_ride_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/REGISTER_ACTIVITY__select_ride_category"
                    android:textSize="15dp"
                    android:visibility="gone"
                    geekui:customTypeface="OpenSans_Regular.ttf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />

                <EditText
                    android:id="@+id/edt_car_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/REGISTER_ACTIVITY__enter_car_number"
                    android:singleLine="true"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />


                <EditText
                    android:id="@+id/bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/REGISTER_ACTIVITY__bank_name"
                    android:singleLine="true"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />


                <EditText
                    android:id="@+id/account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:inputType="number"
                    android:background="@android:color/transparent"
                    android:hint="@string/REGISTER_ACTIVITY__account_number"
                    android:singleLine="true"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />


                <EditText
                    android:id="@+id/account_holder_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/REGISTER_ACTIVITY__account_holder_name"
                    android:singleLine="true"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorView" />
            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:id="@+id/ll_upload_docs"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@drawable/layout_light"-->
            <!--android:gravity="center">-->

            <!--<com.taas.driver.typeface.TypeFaceMuseoRegular-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/upload_documents"-->
            <!--android:textColor="@color/colorText"-->
            <!--android:textSize="15dp" />-->
            <!--</LinearLayout>-->
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorView" />

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <com.taas.driver.typeface.TypeFaceTextMeseoSemiBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REGISTER_ACTIVITY__continuee"
            android:textColor="@color/pure_white"
            android:textSize="16dp"
            geekui:customTypeface="OpenSans_Regular.ttf" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pure_black" />

</LinearLayout>